# workshop

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  agents.md  package-lock.json  package.json
.github/workflows/: release-workshop.yml
apps/marketing-builds-desktop/: package.json  playwright.config.ts  vite.config.ts
apps/marketing-builds-desktop/e2e/: megaphone.spec.ts  redline.spec.ts
apps/marketing-builds-desktop/scripts/: bump-workshop-version.mjs  bump-workshop-version.test.mjs  megaphone-packaged-smoke.mjs  megaphone-packaged-smoke.test.mjs  public-boundary-scan.mjs  public-boundary-scan.test.mjs  (+7 more)
apps/marketing-builds-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/marketing-builds-desktop/src-tauri/capabilities/: default.json
apps/marketing-builds-desktop/src-tauri/src/: lib.rs  main.rs
clients/demo-megaphone/: client.yaml  source-manifest.json
clients/demo-redline/: client.yaml  source-manifest.json
clients/fixture/: client.yaml  source-manifest.json
clients/template-megaphone/: README.md  client.yaml  source-manifest.json
clients/template-redline/: README.md  client.yaml  source-manifest.json
docs/: client-onboarding-design.md  contributing-tools.md  data-boundary-inventory.json  local-readiness.md  marketing-builds-workbench.md  megaphone-corpus-building.md  private-workspaces.md  public-clean-clone-install.md  public-quickstart.md  public-release-checklist.md  public-repo-boundaries.md  redline-packet-building.md  release-checklist.md  troubleshooting-public-workspaces.md  workshop-updates.md
(+117 files in other folders)
