[package]
name = "marketing-builds-desktop"
version = "0.1.5"
description = "Workshop local workbench"
authors = ["Lindsay Brunner"]
edition = "2021"

[lib]
name = "marketing_builds_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-process = "2"
tauri-plugin-updater = "2.10.1"
